syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "api/";

message ConfigResponse {
    bytes config = 1;
}

message MediaItemMetadataRequest {
    string userId = 1;
    string id = 2;
    string status = 3;
    optional string mimeType = 4;
    string type = 5;
    string category = 6;
    optional int32 width = 7;
    optional int32 height = 8;
    optional string creationTime = 9;
    optional string cameraMake = 10;
    optional string cameraModel = 11;
    optional string focalLength = 12;
    optional string apertureFNumber = 13;
    optional string isoEquivalent = 14;
    optional string exposureTime = 15;
    optional string fps = 16;
    optional double latitude = 17;
    optional double longitude = 18;
    optional string exifData = 19;
}

message MediaItemPreviewThumbnailRequest {
    string userId = 1;
    string id = 2;
    string status = 3;
    optional string sourcePath = 4;
    optional string previewPath = 5;
    optional string thumbnailPath = 6;
    optional string placeholder = 7;
}

message MediaItemPlaceRequest {
    string userId = 1;
    string id = 2;
    optional string postcode = 3;
    optional string country = 4;
    optional string state = 5;
    optional string city = 6;
    optional string town = 7;
}

message MediaItemThingRequest {
    string userId = 1;
    string id = 2;
    string name = 3;
}

message MediaItemEmbedding {
    repeated float embedding = 1;
}

message MediaItemFacesRequest {
    string userId = 1;
    string id = 2;
    repeated MediaItemEmbedding embeddings = 3;
    repeated string thumbnails = 4;
}

message MediaItemFinalResultRequest {
    string userId = 1;
    string id = 2;
    string keywords = 3;
    repeated MediaItemEmbedding embeddings = 4;
}

message MediaItemFaceEmbeddingsRequest {
    string userId = 1;
}

message MediaItemFaceEmbedding {
    string id = 1;
    string mediaItemId = 2;
    string peopleId = 3;
    MediaItemEmbedding embedding = 4;
}

message MediaItemFaceEmbeddingsResponse {
    repeated MediaItemFaceEmbedding mediaItemFaceEmbeddings = 1;
}

message GetUsersResponse {
    repeated string users = 1;
}

message MediaItemFacePeople {
    map<string, string> facePeople = 1;
}

message MediaItemPeopleRequest {
    string userId = 1;
    map<string, MediaItemFacePeople> mediaItemFacePeople = 2;
}

service API {
    rpc GetWorkerConfig(google.protobuf.Empty) returns (ConfigResponse) {}
    rpc GetMediaItemFaceEmbeddings(MediaItemFaceEmbeddingsRequest) returns (MediaItemFaceEmbeddingsResponse) {}
    rpc GetUsers(google.protobuf.Empty) returns (GetUsersResponse) {}
    rpc SaveMediaItemMetadata(MediaItemMetadataRequest) returns (google.protobuf.Empty) {}
    rpc SaveMediaItemPreviewThumbnail(MediaItemPreviewThumbnailRequest) returns (google.protobuf.Empty) {}
    rpc SaveMediaItemPlace(MediaItemPlaceRequest) returns (google.protobuf.Empty) {}
    rpc SaveMediaItemThing(MediaItemThingRequest) returns (google.protobuf.Empty) {}
    rpc SaveMediaItemFaces(MediaItemFacesRequest) returns (google.protobuf.Empty) {}
    rpc SaveMediaItemPeople(MediaItemPeopleRequest) returns (google.protobuf.Empty) {}
    rpc SaveMediaItemFinalResult(MediaItemFinalResultRequest) returns (google.protobuf.Empty) {}
}
