syntax = "proto3";

option go_package = "worker/";

message MediaItemProcessRequest {
    string id = 1;
    int64 offset = 2;
    string command = 3; // start, continue, finish
    bytes content = 4;
}

message MediaItemProcessResponse {
    bool ok = 1;
}

service Worker {
    rpc MediaItemProcess(stream MediaItemProcessRequest) returns (MediaItemProcessResponse) {}
}
